test/corpus/keywords.txt
===
Attribute keywords
===

var let if else return class function

---

(source_file
  (attribute)
  (attribute)
  (attribute)
  (attribute)
  (attribute)
  (attribute)
  (attribute))

===
Type keywords
===

true false int string bool

---

(source_file
  (keyword)
  (keyword)
  (keyword)
  (keyword)
  (keyword))
